--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -39,6 +39,10 @@ button {
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+
+
+  transition: transform 0.3s ease-in-out, opacity 0.4s ease;
+  transform: translate(-50%, -100%);
 }
 .popup-modal p {
   margin-bottom: 24px
@@ -49,15 +53,20 @@ button {
   position: fixed;
   inset: 0;
   background: #000;
-  opacity: 0%;
+  opacity: 20%;
 }
 
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  height: auto;
+
+  transform: translate(-50%, -50%);
 }
 
 .backdrop.show {
   opacity: 30%;
+
+  height: auto;
 }
 
